[tool.poetry]
name = "psychrometry"
version = "0.1.0"
description = ""
authors = ["bpht <bennyphtam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.14.1"
dash = "^2.10.0"
numpy = "^1.24.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
